@@ -2,6 +2,8 @@
   * Add multistations
   * On/Off transparency mode on main icon
   * Medium mode for view main icon
+  * First icon show current weather and temperature
+  
 0.12 
   * Simple decor window popup
   * Automatical try connect to Internet
